--- a/django_blog/templates/blog/home.html
+++ b/django_blog/templates/blog/home.html
@@ -32,7 +32,13 @@
                         <small class="text-muted">
                             By {{ post.author.username }} on {{ post.published_date|date:"F d, Y" }}
                         </small>
-                        <a href="{% url 'post-detail' post.pk %}" class="btn btn-outline-primary btn-sm">Read More</a>
+                        <div>
+                            <a href="{% url 'post-detail' post.pk %}" class="btn btn-outline-primary btn-sm">Read More</a>
+                            {% if user.is_authenticated and user == post.author %}
+                            <a href="{% url 'post-update' post.pk %}" class="btn btn-outline-secondary btn-sm">Edit</a>
+                            <a href="{% url 'post-delete' post.pk %}" class="btn btn-outline-danger btn-sm">Delete</a>
+                            {% endif %}
+                        </div>
                     </div>
                 </div>
             </div>
