--- a/django_blog/templates/blog/profile.html
+++ b/django_blog/templates/blog/profile.html
@@ -35,7 +35,9 @@
                     </div>
                     {% endfor %}
                     
-                    <button type="submit" class="btn btn-primary">Update Profile</button>
+                    <div class="d-grid gap-2">
+                        <button type="submit" class="btn btn-primary">Update Profile</button>
+                    </div>
                 </form>
             </div>
         </div>
